# oval-legacy

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py
demo/oval/: index.html  package-lock.json  package.json
demo/oval/src/: Analysis.tsx  App.tsx  AppShell.tsx  Plot.tsx  Upload.tsx  VariableConfigure.tsx  index.css
demo/oval/src/lib/: h5ad-loader.ts
server/: main.py  pyproject.toml
